Connectivity: CG2900 updates for mainlining
This patch contains updates for CG2900 mainlining.
Biggest change is the board config registration where there
has been a switch from direct includes from include/mach/cg2900_devices.h
to a platform device driver registration according to Kernel standards.
This patch also adds support for CG2900 PG2.

ST-Ericsson ID: ER 262090

Change-Id: Idbb4d3a4149a168404e70fc629e17c5a2122493d
Reviewed-on: http://gerrit.lud.stericsson.com/gerrit/5826
Reviewed-by: Par-Gunnar HJALMDAHL <par-gunnar.p.hjalmdahl@stericsson.com>
Tested-by: Par-Gunnar HJALMDAHL <par-gunnar.p.hjalmdahl@stericsson.com>
Reviewed-by: Linus WALLEIJ <linus.walleij@stericsson.com>

Conflicts:
	arch/arm/configs/aries_jpn_defconfig
	arch/arm/configs/dempseyR_rev00_defconfig
	arch/arm/mach-s5pv210/include/mach/cg2900_devices.h
	arch/arm/mach-ux500/Makefile
	arch/arm/mach-ux500/board-mop500.c
	arch/arm/mach-ux500/include/mach/devices.h

--- a/arch/arm/configs/dempseyR_rev00_defconfig
+++ b/arch/arm/configs/dempseyR_rev00_defconfig
@@ -1279,7 +1279,6 @@ CONFIG_SSB_POSSIBLE=y
 #
 # CONFIG_SSB is not set
 CONFIG_MFD_SUPPORT=y
-CONFIG_MFD_CG2900=y
 CONFIG_MFD_CORE=y
 # CONFIG_MFD_88PM860X is not set
 # CONFIG_MFD_SM501 is not set
@@ -1294,6 +1293,12 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_TMIO is not set
 # CONFIG_MFD_T7L66XB is not set
 # CONFIG_MFD_TC6387XB is not set
+CONFIG_MFD_CG2900=y
+CONFIG_MFD_CG2900_CHIP=y
+CONFIG_MFD_STLC2690_CHIP=y
+CONFIG_MFD_CG2900_AUDIO=y
+CONFIG_MFD_CG2900_UART=y
+CONFIG_BT_CG2900=y
 # CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_PMIC_ADP5520 is not set
