--- a/drivers/bluetooth/Kconfig
+++ b/drivers/bluetooth/Kconfig
@@ -217,7 +217,7 @@ config BT_CG2900
 	tristate "ST-Ericsson CG2900 driver"
 	depends on MFD_CG2900 && BT
 	help
-	  Select if BlueZ shall be used as Bluetooth stack with
-	  ST-Ericsson CG2900 Connectivity controller
+	  Select if ST-Ericsson CG2900 Connectivity controller shall be used as
+	  Bluetooth controller for BlueZ.
 
 endmenu
