--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -215,6 +215,7 @@ config MFD_TC6387XB
 
 config MFD_CG2900
 	tristate "Support ST-Ericsson CG2900 main structure"
+	depends on NET
 	help
 	  Support for ST-Ericsson CG2900 Connectivity Combo controller main structure.
 	  Supports multiple functionalities muxed over a Bluetooth HCI H:4 interface.
@@ -227,16 +228,24 @@ config MFD_CG2900_CHIP
 	  Support for ST-Ericsson CG2900 Connectivity Controller
 
 config MFD_STLC2690_CHIP
-	tristate "Support ST-Ericsson STLC2690 Connectivity controller"
+	tristate "Support STLC2690 Connectivity controller"
 	depends on MFD_CG2900
 	help
 	  Support for ST-Ericsson STLC2690 Connectivity Controller
 
-config MFD_CG2900_AUDIO
-	tristate "Support ST-Ericsson CG2900 audio interface"
+config MFD_CG2900_UART
+	tristate "Support CG2900 UART transport"
 	depends on MFD_CG2900
 	help
-	  Support for ST-Ericsson CG2900 Connectivity audio interface
+	  Support for UART as transport for ST-Ericsson CG2900 Connectivity
+	  Controller
+
+config MFD_CG2900_AUDIO
+	tristate "Support CG2900 audio interface"
+	depends on MFD_CG2900
+	help
+	  Support for ST-Ericsson CG2900 Connectivity audio interface. Gives a
+	  module the ability to setup audio paths within the CG2900 controller.
 
 config MFD_TC6393XB
 	bool "Support Toshiba TC6393XB"
