Connectivity: Comment corrections for CG2900
This patch corrects comments received from the Linux community.
Main changes are usage of platform driver as well as several minor fixes
within the Bluetooth driver.
This patch also removes warnings received when generating the KernelDoc.

ST-Ericsson ID: AP276026
ST-Ericsson FOSS-OUT ID: STETL-FOSS-OUT-10019

Change-Id: I581efa04b6b93d950744bbd4c8ce8eb7ee280529

Signed-off-by: Par-Gunnar Hjalmdahl <par-gunnar.p.hjalmdahl@stericsson.com>
Change-Id: I581efa04b6b93d950744bbd4c8ce8eb7ee280529
Reviewed-on: http://gerrit.lud.stericsson.com/gerrit/6748
Reviewed-by: Linus WALLEIJ <linus.walleij@stericsson.com>

--- a/drivers/mfd/cg2900/Makefile
+++ b/drivers/mfd/cg2900/Makefile
@@ -2,13 +2,14 @@
 # Makefile for ST-Ericsson CG2900 connectivity combo controller
 #
 
-obj-$(CONFIG_MFD_CG2900)            += cg2900.o
-cg2900-objs                         := cg2900_core.o cg2900_char_devices.o
-export-objs                         := cg2900_core.o
+obj-$(CONFIG_MFD_CG2900)	+= cg2900_core.o
+export-objs			:= cg2900_core.o
 
-obj-$(CONFIG_MFD_CG2900_CHIP)       += cg2900_chip.o
-obj-$(CONFIG_MFD_STLC2690_CHIP)     += stlc2690_chip.o
+obj-$(CONFIG_MFD_CG2900)	+= cg2900_char_devices.o
 
-obj-$(CONFIG_MFD_CG2900_UART)       += cg2900_uart.o
+obj-$(CONFIG_MFD_CG2900_CHIP)	+= cg2900_chip.o
+obj-$(CONFIG_MFD_STLC2690_CHIP)	+= stlc2690_chip.o
 
-obj-$(CONFIG_MFD_CG2900_AUDIO)      += cg2900_audio.o
+obj-$(CONFIG_MFD_CG2900_UART)	+= cg2900_uart.o
+
+obj-$(CONFIG_MFD_CG2900_AUDIO)	+= cg2900_audio.o
