ux500: add CG2900 driver
Including:
ST-Ericsson ID: AP261995
ST-Ericsson ID: ER274145
ST-Ericsson ID: WP271186
ST-Ericsson ID: ER262090
ST-Ericsson ID: WP256943
ST-Ericsson ID: WP271186
ST-Ericsson ID: ER262089
ST-Ericsson ID: ER262089
ST-Ericsson ID: ER262089
ST-Ericsson ID: ER268880
ST-Ericsson ID: ER261546
ST-Ericsson ID: ER266093
ST-Ericsson ID: 261396
ST-Ericsson ID: 263723
ST-Ericsson ID: 259611
ST-Ericsson ID: ER256949

Signed-off-by: Robert Marklund <robert.marklund@stericsson.com>

Conflicts:
	drivers/bluetooth/Kconfig
	drivers/mfd/Kconfig
	drivers/mfd/Makefile

--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -212,13 +212,32 @@ config MFD_TC6387XB
 	select MFD_TMIO
 	help
 	  Support for Toshiba Mobile IO Controller TC6387XB
+
 config MFD_CG2900
 	tristate "Support ST-Ericsson CG2900 main structure"
-	depends on NET
 	help
 	  Support for ST-Ericsson CG2900 Connectivity Combo controller main structure.
 	  Supports multiple functionalities muxed over a Bluetooth HCI H:4 interface.
 	  CG2900 support Bluetooth, FM radio, and GPS.
+
+config MFD_CG2900_CHIP
+	tristate "Support CG2900 Connectivity controller"
+	depends on MFD_CG2900
+	help
+	  Support for ST-Ericsson CG2900 Connectivity Controller
+
+config MFD_STLC2690_CHIP
+	tristate "Support ST-Ericsson STLC2690 Connectivity controller"
+	depends on MFD_CG2900
+	help
+	  Support for ST-Ericsson STLC2690 Connectivity Controller
+
+config MFD_CG2900_AUDIO
+	tristate "Support ST-Ericsson CG2900 audio interface"
+	depends on MFD_CG2900
+	help
+	  Support for ST-Ericsson CG2900 Connectivity audio interface
+
 config MFD_TC6393XB
 	bool "Support Toshiba TC6393XB"
 	depends on GPIOLIB && ARM
