--- a/drivers/bluetooth/Kconfig
+++ b/drivers/bluetooth/Kconfig
@@ -213,4 +213,11 @@ config BT_HID
 	help
 	  say M to compile it as module.
 	  
+config BT_CG2900
+	tristate "ST-Ericsson CG2900 driver"
+	depends on MFD_CG2900 && BT
+	help
+	  Select if BlueZ shall be used as Bluetooth stack with
+	  ST-Ericsson CG2900 Connectivity controller
+
 endmenu
