mfd: Update CG2900 after community comments.
With this patch cg2900_uart starts to use N_HCI from hci_ldisc.
Also cg2900_uart cell device start to use driver data
to keep uart_info structure.

Depends-On: I4bd71c250db5128b2b00fa10fe3220918f9614ed

ST-Ericsson ID: AP277631
ST-Ericsson FOSS-OUT ID: STETL-FOSS-OUT-10019
ST-Ericsson Linux-next: Not tested, ER 282957

Change-Id: I226648d1ce4abe8951f3f64f8ac9facd22dcbbbf
Signed-off-by: Lukasz Rymanowski <lukasz.rymanowski@tieto.com>
Reviewed-on: http://gerrit.lud.stericsson.com/gerrit/10587
Reviewed-by: Lukasz RYMANOWSKI <lukasz.rymanowski@stericsson.com>
Tested-by: Lukasz RYMANOWSKI <lukasz.rymanowski@stericsson.com>
Reviewed-by: Dariusz SZYMCZAK <dariusz.xd.szymczak@stericsson.com>
Reviewed-by: Par-Gunnar HJALMDAHL <par-gunnar.p.hjalmdahl@stericsson.com>

--- a/drivers/bluetooth/Makefile
+++ b/drivers/bluetooth/Makefile
@@ -19,6 +19,8 @@ obj-$(CONFIG_BT_ATH3K)		+= ath3k.o
 obj-$(CONFIG_BT_CG2900)		+= btcg2900.o
 obj-$(CONFIG_BT_MRVL)		+= btmrvl.o
 obj-$(CONFIG_BT_MRVL_SDIO)	+= btmrvl_sdio.o
+obj-$(CONFIG_MFD_CG2900_UART)   += cg2900_uart.o
+
 
 btmrvl-y			:= btmrvl_main.o
 btmrvl-$(CONFIG_DEBUG_FS)	+= btmrvl_debugfs.o
