--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -236,6 +236,8 @@ config MFD_STLC2690_CHIP
 config MFD_CG2900_UART
 	tristate "Support CG2900 UART transport"
 	depends on MFD_CG2900
+	select BT
+	select BT_HCIUART
 	help
 	  Support for UART as transport for ST-Ericsson CG2900 Connectivity
 	  Controller
