mfd: Updating CG2900 driver for community
This patch modifies the CG2900 driver in order to fulfil
comments received from the Kernel community.
It contains a completely new architecture and way of enabling
CG2900 devices. It also moves GPIO settings to board file.

ST-Ericsson Change-ID: AP277631
ST-Ericsson FOSS-OUT ID: STETL-FOSS-OUT-10019

Change-Id: Icde8205850310fe9a6f0d0b77b9b48dd6748dc33
Signed-off-by: Par-Gunnar Hjalmdahl <par-gunnar.p.hjalmdahl@stericsson.com>
Reviewed-on: http://gerrit.lud.stericsson.com/gerrit/9796

Conflicts:
	arch/arm/mach-ux500/board-mop500.c
	sound/soc/codecs/cg29xx.c

--- a/arch/arm/configs/aries_jpn_defconfig
+++ b/arch/arm/configs/aries_jpn_defconfig
@@ -1272,7 +1272,7 @@ CONFIG_MFD_CG2900_CHIP=y
 CONFIG_MFD_STLC2690_CHIP=y
 CONFIG_MFD_CG2900_AUDIO=y
 CONFIG_MFD_CG2900_UART=y
-CONFIG_BT_CG2900=y
+CONFIG_MFD_CG2900_TEST=y
 # CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_PMIC_ADP5520 is not set
