--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -249,6 +249,12 @@ config MFD_CG2900_AUDIO
 	  Support for ST-Ericsson CG2900 Connectivity audio interface. Gives a
 	  module the ability to setup audio paths within the CG2900 controller.
 
+config MFD_CG2900_TEST
+	tristate "Support CG2900 Test Char Device"
+	depends on MFD_CG2900
+	help
+	  Support for ST-Ericsson CG2900 Test Character Device.
+
 config MFD_TC6393XB
 	bool "Support Toshiba TC6393XB"
 	depends on GPIOLIB && ARM
