Update to CG2900 Firmware release M4C3 - FM FW
Update the FM coeffecients and firmware files to the M4C3 firmware
release package.

ST-Ericsson ID: WP 316585

Change-Id: I35781ac5090bcde8a0041408b42cd2a35864df21
Reviewed-on: http://gerrit.lud.stericsson.com/gerrit/11075
Reviewed-by: QATOOLS
Reviewed-by: Hemant GUPTA <hemant.gupta@stericsson.com>
Reviewed-by: Par-Gunnar HJALMDAHL <par-gunnar.p.hjalmdahl@stericsson.com>
Reviewed-by: Linus WALLEIJ <linus.walleij@stericsson.com>
Tested-by: Linus WALLEIJ <linus.walleij@stericsson.com>

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -149,8 +149,8 @@ fw-shipped-$(CONFIG_RADIO_CG2900) += cg2900_fm_bt_src_coeff_info.fw cg2900_fm_ex
 					cg2900_fm_fm_coeff_info.fw cg2900_fm_fm_prog_info.fw \
 					R1f.2_SoC1v20_BT_src_coeff_1.1.fw R1f.2_SoC1v20_EXT_src_coeff_1.1.fw \
 					R1f.2_SoC1v20_Cobra_FM_SOC1_coef.fw R1f.2_SoC1v20_Cobra_FM_SOC1_prog.fw \
-					R2c_SoC2v01_BT_src_coeff_1.1.fw R2c_SoC2v01_Cobra_FM_SOC2_coef.fw \
-					R2c_SoC2v01_Cobra_FM_SOC2_prog.fw R2c_SoC2v01_EXT_src_coeff_1.1.fw
+					R2c.2_SoC2v03_BT_src_coeff_1.1.fw R2c.2_SoC2v03_EXT_src_coeff_1.1.fw \
+					R2c.2_SoC2v03_Cobra_FM_SOC2_coef.fw R2c.2_SoC2v03_Cobra_FM_SOC2_prog.fw
 
 fw-shipped-all := $(fw-shipped-y) $(fw-shipped-m) $(fw-shipped-)
 
