--- a/arch/arm/configs/aries_eur_defconfig
+++ b/arch/arm/configs/aries_eur_defconfig
@@ -882,6 +882,16 @@ CONFIG_APANIC_PLABEL="kpanic"
 CONFIG_SAMSUNG_JACK=y
 CONFIG_SAMSUNG_FM_SI4709=m
 CONFIG_USB_SWITCH_FSA9480=y
+CONFIG_USB_S3C_OTG_HOST=y
+CONFIG_USB_DEBUG=y
+CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_STORAGE=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_FTDI_SIO=y
+CONFIG_USB_ACM=y
+
 # CONFIG_C2PORT is not set
 
 #
@@ -1497,7 +1507,7 @@ CONFIG_USB_SUPPORT=y
 CONFIG_USB_ARCH_HAS_HCD=y
 # CONFIG_USB_ARCH_HAS_OHCI is not set
 # CONFIG_USB_ARCH_HAS_EHCI is not set
-# CONFIG_USB is not set
+CONFIG_USB=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MUSB_HDRC is not set
