--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -87,6 +87,26 @@ config CPU_FREQ_DEFAULT_GOV_USERSPACE
 	  program shall be able to set the CPU dynamically without having
 	  to enable the userspace governor manually.
 
+config CPU_FREQ_DEFAULT_GOV_ONDEMANDX
+  bool "ondemandx"
+  select CPU_FREQ_GOV_ONDEMANDX
+  select CPU_FREQ_GOV_PERFORMANCE
+  help
+    Use the CPUFreq governor 'ondemand' as default. This allows
+    you to get a full dynamic frequency capable system by simply
+    loading your cpufreq low-level hardware driver.
+    Be aware that not all cpufreq drivers support the ondemand
+    governor. If unsure have a look at the help section of the
+    driver. Fallback governor will be the performance governor.
+    OndemandX has built in sleep profile, but not working Sysfs
+    interface
+
+config CPU_FREQ_DEFAULT_GOV_SMARTASS2
+        bool "smartass2"
+        select CPU_FREQ_GOV_SMARTASS2
+        help
+            Use the CPUFreq governor 'smartassV2' as default.
+
 config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	bool "ondemand"
 	select CPU_FREQ_GOV_ONDEMAND
@@ -189,5 +209,31 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+
+config CPU_FREQ_GOV_ONDEMANDX
+  tristate "'ondemandx' cpufreq policy governor"
+  select CPU_FREQ_TABLE
+  help
+    'ondemand' - This driver adds a dynamic cpufreq policy governor.
+    The governor does a periodic polling and 
+    changes frequency based on the CPU utilization.
+    The support for this governor depends on CPU capability to
+    do fast frequency switching (i.e, very low latency frequency
+    transitions). 
+	
+    To compile this driver as a module, choose M here: the
+    module will be called cpufreq_ondemand.
+
+    For details, take a look at linux/Documentation/cpu-freq.
+ 	
+    If in doubt, say N.
+
+config CPU_FREQ_GOV_SMARTASS2
+        tristate "'smartassV2' cpufreq governor"
+        depends on CPU_FREQ
+        help
+            'smartassV2' - a "smart" interactoive governor
+            If in doubt, say N.
 
 endif	# CPU_FREQ
