--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -107,6 +107,13 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASS2
         help
             Use the CPUFreq governor 'smartassV2' as default.
 
+config CPU_FREQ_DEFAULT_GOV_LULZACTIVE
+	bool "lulzactive"
+	select CPU_FREQ_GOV_LULZACTIVE
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+		Use the CPUFreq governor 'lulzactive' as default.
+
 config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	bool "ondemand"
 	select CPU_FREQ_GOV_ONDEMAND
@@ -235,5 +242,13 @@ config CPU_FREQ_GOV_SMARTASS2
         help
             'smartassV2' - a "smart" interactoive governor
             If in doubt, say N.
+
+
+config CPU_FREQ_GOV_LULZACTIVE
+	tristate "'lulzactive' cpufreq governor"
+	depends on CPU_FREQ
+	help
+		'lulzactive' - an interactive governor by Tegrak
+		If in doubt, say N.
 
 endif	# CPU_FREQ
