some Vibetonz cleanup (cherry picked from commit e2217ac785982e5ed3117ee7b238a6f6ff68f72c)
Signed-off-by: Bryan Hundven <bryanhundven@gmail.com>

--- a/arch/arm/mach-s5pv210/Makefile
+++ b/arch/arm/mach-s5pv210/Makefile
@@ -37,7 +37,10 @@ obj-$(CONFIG_MACH_ARIES)	+= mach-aries.o dempsey-rfkill.o
 else
 obj-$(CONFIG_MACH_ARIES)	+= mach-aries.o aries-rfkill.o
 endif
-#obj-$(CONFIG_MACH_ARIES)	+= aries-vibrator.o
+
+ifndef CONFIG_VIBETONZ
+obj-$(CONFIG_MACH_ARIES)	+= aries-vibrator.o
+endif
 #obj-$(CONFIG_MACH_ARIES)	+= aries-btlpm.o
 obj-$(CONFIG_MACH_ARIES)	+= aries-watchdog.o
 obj-$(CONFIG_MACH_ARIES)	+= aries-panel.o
