--- a/arch/arm/configs/vibrantplus_rev00_defconfig
+++ b/arch/arm/configs/vibrantplus_rev00_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Fri Aug 10 10:57:09 2012
+# Fri Aug 10 11:49:14 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -39,8 +39,8 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="blastoff"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -921,7 +921,7 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_IWMC3200TOP is not set
 CONFIG_SAMSUNG_MODEMCTL=y
 CONFIG_CP_CHIPSET_STE=y
-CONFIG_VIBETONZ=y
+# CONFIG_VIBETONZ is not set
 CONFIG_PN544=y
 CONFIG_J4FS=y
 CONFIG_PARAM=y
