--- a/arch/arm/mach-s5pv210/Makefile
+++ b/arch/arm/mach-s5pv210/Makefile
@@ -37,7 +37,7 @@ obj-$(CONFIG_MACH_ARIES)	+= mach-aries.o dempsey-rfkill.o
 else
 obj-$(CONFIG_MACH_ARIES)	+= mach-aries.o aries-rfkill.o
 endif
-#obj-$(CONFIG_MACH_ARIES)	+= aries-vibrator.o
+obj-$(CONFIG_MACH_ARIES)	+= aries-vibrator.o
 #obj-$(CONFIG_MACH_ARIES)	+= aries-btlpm.o
 obj-$(CONFIG_MACH_ARIES)	+= aries-watchdog.o
 obj-$(CONFIG_MACH_ARIES)	+= aries-panel.o
