--- a/arch/arm/mach-s5pv210/Makefile
+++ b/arch/arm/mach-s5pv210/Makefile
@@ -74,4 +74,6 @@ obj-$(CONFIG_S5PV210_SETUP_CSIS)	+= setup-csis.o
 
 obj-$(CONFIG_GPS_CHIPSET_STE_CG2900)	+= cg2900_devices.o
 
-obj-$(CONFIG_CPU_IDLE)		+= cpuidle.o didle.o
+obj-y				+= idle.o
+idle-$(CONFIG_CPU_IDLE)		:= cpuidle.o
+idle-$(CONFIG_CPU_DIDLE)	+= didle.o
