Use samsung_modemctl from our sgs4g aries port.
Signed-off-by: Bryan Hundven <bryanhundven@gmail.com>

--- a/drivers/misc/samsung_modemctl/Makefile
+++ b/drivers/misc/samsung_modemctl/Makefile
@@ -1,4 +1,3 @@
-obj-y +=	modemctl/
-obj-y +=	onedram/
-obj-y +=	svnet/
-
+obj-$(CONFIG_SAMSUNG_MODEMCTL)	+= modemctl/
+obj-$(CONFIG_SAMSUNG_MODEMCTL)	+= onedram/
+obj-$(CONFIG_SAMSUNG_MODEMCTL)	+= svnet/
