Revert "Use samsung_modemctl from our sgs4g aries port."
This made battery life much worse. For me anyways.
I'm on AT&T, and the phone only gives me edge.

This reverts commit ff8b584781289f6270e480b808a9ec7fea17caf9.

Signed-off-by: Bryan Hundven <bryanhundven@gmail.com>

--- a/drivers/misc/samsung_modemctl/Makefile
+++ b/drivers/misc/samsung_modemctl/Makefile
@@ -1,3 +1,4 @@
-obj-$(CONFIG_SAMSUNG_MODEMCTL)	+= modemctl/
-obj-$(CONFIG_SAMSUNG_MODEMCTL)	+= onedram/
-obj-$(CONFIG_SAMSUNG_MODEMCTL)	+= svnet/
+obj-y +=	modemctl/
+obj-y +=	onedram/
+obj-y +=	svnet/
+
